@@ -9,21 +9,18 @@ There are significant architectural differences between C1991 and C2021 / Fortra
 	Reconciliations/Upgrades:
 	―	Normalizing the format of dtext.dat and rewriting the messaging routine: dsub.c, dgame.c, dtext.dat.
 	―	The version numbering: Test.ex, Test.ex0, dtext.dat.
+∙	Time/Date functions:
+	―	Converted to seconds: dinit.c, dso5.c, dverb2.c, rtim.c, sverbs.c.
 ∙	Random Number Generator:
-	―	C1991 uses srand() and rand(), which is not directly supported in Fortran 77.
-	―	Version 2.6 of the Fortran source uses custom functions INIRND and RND, which are not properly validated.
-	―	C2021 used this Fortran version and has been temporarily replaced by what the C1991 version used.
-	―	Version 3 of the Fortran source uses non-standard SRAND and RAND.
-	―	The desired revision is a high-quality, properly-validated random number generator,
-		(P.L'Ecuyer, ‟Efficient and portable combined random number generators”, CACM 31(6), June 1988, 742-751)
-		with a time-date random number seed routine, and the ability to specify the seed at the command line.
-	―	To remove variability in the test outputs, random number seeds are to be specified by the test routines.
+	―	To remove variability in the test outputs, random number seeds need to be specified by the test routines.
 	Reconciliations/Upgrades:
-	―	Command-line arguments & settable random number seeds: Test.in, Test.ex, Test.ex0, Makefile, dinit.c (call to inirnd()).
-	―	Inclusion of a more comprehensive test suite: Test.*, Makefile.
+	―	Command-line arguments (to set the random number seed): Test.in, Test.ex, Test.ex0, Makefile, dinit.c
+	―	Modified time/date function used with the random number seed: dinit.c.
+
 Other pending reconciliations:
 ∙	Enabling flags: dsub.c, Makefile.
 ∙	The documentation: README
+∙	Inclusion of a more comprehensive test suite: Test.*, Makefile.
 
 Pending recoding ― for both the C and Fortran versions:
 ∙	Integration of Fortran version 3.2.
