@@ -5,29 +5,78 @@ C Revisions Copyright (c) 2021, Darth Spectra (Lydia Marie Williamson).
 C
         SUBROUTINE INTIME(HOURS, MINUTES, SECONDS)
 	IMPLICIT INTEGER (A-Z)
-        DIMENSION TARRAY(3)
+	DIMENSION TARRAY(3)
 C	CALL GETTIM(HOURS, MINUTES, SECONDS, HUNDREDTHS)
-        CALL ITIME(TARRAY)
-        HOURS = TARRAY(1)
-        MINUTES = TARRAY(2)
-        SECONDS = TARRAY(3)
+	CALL ITIME(TARRAY)
+	HOURS = TARRAY(1)
+	MINUTES = TARRAY(2)
+	SECONDS = TARRAY(3)
 	END
 
+	SUBROUTINE RANDS(S0,S1)
+	INTEGER*4 S0,M0,A0,Q0,R0,SEED0
+	INTEGER*4 S1,M1,A1,Q1,R1,SEED1
+	COMMON /RANDOM/ M0,A0,Q0,R0,SEED0
+	COMMON /RANDOM/ M1,A1,Q1,R1,SEED1
+	M0=1+2*3*7*631*81031 ! = 2^31 - 85
+	A0=40014
+	Q0=M0/A0
+	R0=MOD(M0,A0)
+	M1=1+2*19*31*1019*1789 ! = 2^31 - 249
+	A1=40692
+	Q1=M1/A1
+	R1=MOD(M1,A1)
+	SEED0=MOD(S0,M0)
+	SEED1=MOD(S1,M1)
+	END
+
+C A random long integer in [1,M0-1].
+C P.L'Ecuyer, "Efficient and portable combined random number generators",
+C CACM 31(6), June 1988, 742-751.
+C The period of the generator is:
+C	(M0-1)(M1-1)/2 = 2*3*7*19*31*631*1019*1789*81031 = 2^61-360777242114
+	INTEGER*4 FUNCTION RANDZ()
+	INTEGER*4 M0,A0,Q0,R0,SEED0
+	INTEGER*4 M1,A1,Q1,R1,SEED1
+	COMMON /RANDOM/ M0,A0,Q0,R0,SEED0
+	COMMON /RANDOM/ M1,A1,Q1,R1,SEED1
+	INTEGER K0,K1
+C       This requires:
+C       *	(M0-1)/2 and (M1-1)/2 be relatively prime,
+C       *	A0^2 < M0 and A1^2 < M1,
+C       *	0 <= SEED0 < M0, 0 <= SEED1 < M1.
+C       Under these conditions, the following is equivalent to:
+C       *	SEED0=A0*MOD(SEED0,M0),SEED1=A1*MOD(SEED1,M1);
+C       and 0 <= SEED0 < M0, 0 <= SEED1 < M1 continues to hold.
+	K0=SEED0/Q0;
+	SEED0=A0*(SEED0-K0*Q0)-K0*R0;
+	IF(SEED0.LT.0)SEED0=SEED0+M0;
+	K1=SEED1/Q1;
+	SEED1=A1*(SEED1-K1*Q1)-K1*R1;
+	IF(SEED1.LT.0)SEED1=SEED1+M1;
+C The result is in the range [0,M0-2].
+	RANDZ=SEED0-SEED1;
+	IF(RANDZ.LT.1)RANDZ=RANDZ+M0-1;
+	RETURN
+	END
+
+C The last remnant of the seed update routine from the Fortran original
+C is used, here, to initialize the seed.
 	SUBROUTINE INIRND(SEED)
-	INTEGER SEED,SEEDY
-	COMMON /RANDOM/ SEEDY
-	SEEDY = SEED
+	INTEGER*4 SEED,SEED1
+        SEED1=SEED*INT(Z'423')+INT(Z'11')
+	CALL RANDS(SEED,SEED1)
 	END
 
-	FUNCTION RND(MAXVAL)
-	IMPLICIT INTEGER (A-Z)
-	COMMON /RANDOM/ SEEDY
-	SEEDY = IAND(SEEDY*(1024+32+2+1) + 17, Z'7FFFFFFF')
-	RND = MOD((SEEDY/100),MAXVAL)
+C A random integer in [0,MAXVAL-1].
+	INTEGER FUNCTION RND(MAXVAL)
+        INTEGER*4 RANDZ
+	INTEGER MAXVAL
+	RND=MOD(RANDZ(),MAXVAL)
+	RETURN
 	END
 
 	SUBROUTINE EXIT
 C NO "CALL EXIT" HERE
 	STOP
 	END
-
